Various design fix (#313)
* Truncate story alumni summary + remove shadow on story logo + round up review counter

* Remove useless cache on testimonials

* Update projects design

* Translate project cta

--- a/app/assets/stylesheets/pages/_alumni.scss
+++ b/app/assets/stylesheets/pages/_alumni.scss
@@ -30,7 +30,7 @@
     margin: 100px auto 160px;
     max-width: 620px;
     text-align: center;
-    z-index: 10;
+    z-index: 1;
 
     @media (max-width: 624px) {
       padding: 0 20px;
@@ -129,7 +129,6 @@
             border-radius: 50%;
             transform: scale(0.7);
             transition: all 0.3s ease-in-out;
-            box-shadow: 0 1px 6px 0px rgba(0,0,0,0.2);
           }
 
           .story-user-avatar {
